@@ -407,6 +407,7 @@ sub form_header {
 
     print qq|
 <body onLoad="document.forms[0].${focus}.focus()" />
+| . $form->open_status_div . qq|
 
 <form method=post action="$form->{script}">
 |;
@@ -966,7 +967,7 @@ qq|<td align=center><input name="memo_$i" size=11 value="$form->{"memo_$i"}"></t
 
     print qq|
 </form>
-
+| . $form->close_status_div . qq|
 </body>
 </html>
 |;
