@@ -227,6 +227,20 @@ tr.record {
 tr.warning {
 	background-color: yellow;
 }
+
+/* Theming controls based on transaction status */
+
+#statusdiv.new input {
+}
+
+#statusdiv.posted input {
+       background-color: white;
+}
+
+#statusdiv.saved input {
+       background-color: #ccccff;
+}
+
 /* media stuff */
 
 @media screen {
